# anti-recommender

./: .env  .gitignore  Makefile  README.md  anti-recommender-reason.opam  dune-project  elm.json  index.html  package-lock.json  package.json  style.css  tailwind.config.js  test2.elm  webpack.config.js
backend/: .env.ci  .env.local  mypy.ini  pyproject.toml  ruff.toml
backend/app/: constants.py  dependencies.py  main.py
backend/app/anti_recommendation_engine/: __init__.py  anti_recommendation_engine.py
backend/app/anti_recommenders/: __init__.py  anti_recommender.py  anti_recommender_proxy.py
backend/app/anti_recommenders/arkg/: __init__.py  arkg_anti_recommender.py
backend/app/anti_recommenders/open_ai/: __init__.py  normal_open_ai_anti_recommender.py  open_ai_anti_recommender.py  open_ai_normal_anti_recommender.py  regular_open_ai_anti_recommender.py
backend/app/anti_recommenders/openai/: __init__.py  normal_openai_anti_recommender.py  openai_anti_recommender.py
backend/app/auth/: __init__.py  auth_exception.py  auth_response.py  auth_service.py  client.py  exceptions.py  results.py  user_not_found_auth_exception.py  user_response.py
backend/app/auth/supabase/: __init__.py  supabase_auth_exception.py  supabase_auth_response.py  supabase_auth_service.py  supabase_exceptions.py  supabase_results.py  supabase_user_response.py
backend/app/constants/: __init__.py
backend/app/data/: wikipedia_output_path.py
backend/app/data/test/: wikipedia_arkg.ttl
backend/app/database/: __init__.py  client.py  database_service.py  exceptions.py  results.py
backend/app/database/supabase/: __init__.py  (+3 more)
backend/app/models/: __init__.py  anti_recommendation.py  anti_recommendation_graph.py  anti_recommendations_selector.py  auth_token.py  credentials.py  credentials_error.py  record.py  settings.py  settings_types.py  table_query.py  token.py  user.py  user_state.py  wikipedia_record.py
backend/app/namespaces/: __init__.py  schema.py
backend/app/readers/: __init__.py  all_source_reader.py  create_readers.py
backend/app/record/: record.py
backend/app/record_reader/: record_reader.py
backend/app/routers/: __init__.py  dependencies.py  records.py  routers.py
backend/app/storage/: storage.py
backend/app/storage_manager/: storage_manager.py
backend/app/tests/: conftest.py  test_main.py
backend/app/user/: __init__.py  create_new_user.py  supabase_user_service.py  user.py  user_service.py  user_service_exception.py
backend/app/utils/: __init__.py  create_user_on_startup.py  fetch_user_state_from_database.py  upsert_user_state_into_database.py
backend/script/: format  test
nerdswipe-backend/: .env.local  pyproject.toml
nerdswipe-backend/app/: main.py
nerdswipe-backend/app/anti_recommendation_engine/: anti_recommendation_engine.py
nerdswipe-backend/app/anti_recommender/: anti_recommender.py  anti_recommender_proxy.py
nerdswipe-backend/app/anti_recommenders/: anti_recommender.py  anti_recommender_generator.py  anti_recommender_proxy.py
nerdswipe-backend/app/models/: record.py
nerdswipe-backend/app/readers/: all_source_reader.py  readers_initializer.py  readers_instantiator.py
nerdswipe-backend/app/tests/: conftest.py
src/: Index.re  (+4 more)
(+139 files in other folders)
