(lang dune 3.8)

(using melange 0.1)

(name anti-recommender-reason)

(license "MIT")

(maintainers "imlapps")

(authors "imlapps")

(homepage https://github.com/imlapps/anti-recommender)

(bug_reports https://github.com/imlapps/anti-recommender/issues)

(package
 (allow_empty)
 (name anti-recommender-reason)
 (synopsis "Anti-Recommender prototype")
 (description "An Anti-Recommender prototype in ReasonReact"))
