[tool.poetry]
name = "nerdswipe-backend"
version = "0.1.0"
description = ""
authors = ["imlapps"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
black = "^24.2.0"
mypy = "^1.8.0"
ruff = "^0.3.0"
pytest = "^8.0.2"
pathlib = "^1.0.1"
langchain = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = [
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls,
    "ANN204", # Missing return type annotation for __init__
    "COM812", # Trailing comma missing
    "D",      # Missing docstrings
    "E501",   # Line too long
    "EM102",  # Exception must not use an f-string literal
    "ERA001", # Commented-out code
    "FA",     # Missing from __future__ import annotations
    "I001",   # Import block is un-sorted or un-formatted
    "ICN001", # Pandas should be imported as pd
    "N815",   # Mixed-case variables
    "S101",   # Use of assert
    "TRY003", # Avoid specifying long messages outside the exception class

]
lint.select = ["ALL"]
src = ["app"]
target-version = "py310"